--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -157,33 +157,57 @@ header, footer {
 }
 
 .header .nav {
+    position: relative;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    padding: 1rem 2rem;
+}
+
+.header .nav-tabs-container {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+}
+
+.header .nav-tabs {
+    display: flex;
+    gap: 2rem;
 }
 
 .header .nav a {
     color: #4b5563; 
     transition: color 0.3s; 
+    text-decoration: none;
+    font-size: 1.125rem;
 }
+
 .header .nav a:hover {
     color: #1e3a8a; 
 }
 
 .header .logo {
+    height: 6rem;
+    width: auto;
+}
+
+.header .logo img {
+    height: 100%;
+    width: auto;
+}
+
+.header .cart-container {
+    position: absolute;
+    right: 2rem;
     display: flex;
     align-items: center;
-    height: 6rem;
-}
-.header .logo img {
-    height: 1rem;
-    width: auto;
 }
 
 .header .cart .badge {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: -0.4rem;
+    right: -0.7rem;
     background-color: #1e3a8a;
     color: white; 
     border-radius: 9999px; 
